---
source: crates/ruff_linter/src/rules/refurb/mod.rs
---
FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text("test")`
  --> FURB103.py:12:6
   |
11 | # FURB103
12 | with open("file.txt", "w") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |     f.write("test")
   |
help: Replace with `Path("file.txt").write_text("test")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_bytes(foobar)`
  --> FURB103.py:16:6
   |
15 | # FURB103
16 | with open("file.txt", "wb") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_bytes(foobar)`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_bytes(b"abc")`
  --> FURB103.py:20:6
   |
19 | # FURB103
20 | with open("file.txt", mode="wb") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
21 |     f.write(b"abc")
   |
help: Replace with `Path("file.txt").write_bytes(b"abc")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar, encoding="utf8")`
  --> FURB103.py:24:6
   |
23 | # FURB103
24 | with open("file.txt", "w", encoding="utf8") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar, encoding="utf8")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar, errors="ignore")`
  --> FURB103.py:28:6
   |
27 | # FURB103
28 | with open("file.txt", "w", errors="ignore") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
29 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar, errors="ignore")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar)`
  --> FURB103.py:32:6
   |
31 | # FURB103
32 | with open("file.txt", mode="w") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar)`

FURB103 `open` and `write` should be replaced by `Path(foo()).write_bytes(bar())`
  --> FURB103.py:36:6
   |
35 | # FURB103
36 | with open(foo(), "wb") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^
37 |     # The body of `with` is non-trivial, but the recommendation holds.
38 |     bar("pre")
   |
help: Replace with `Path(foo()).write_bytes(bar())`

FURB103 `open` and `write` should be replaced by `Path("a.txt").write_text(x)`
  --> FURB103.py:44:6
   |
43 | # FURB103
44 | with open("a.txt", "w") as a, open("b.txt", "wb") as b:
   |      ^^^^^^^^^^^^^^^^^^^^^^^
45 |     a.write(x)
46 |     b.write(y)
   |
help: Replace with `Path("a.txt").write_text(x)`

FURB103 `open` and `write` should be replaced by `Path("b.txt").write_bytes(y)`
  --> FURB103.py:44:31
   |
43 | # FURB103
44 | with open("a.txt", "w") as a, open("b.txt", "wb") as b:
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^
45 |     a.write(x)
46 |     b.write(y)
   |
help: Replace with `Path("b.txt").write_bytes(y)`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(bar(bar(a + x)))`
  --> FURB103.py:49:18
   |
48 | # FURB103
49 | with foo() as a, open("file.txt", "w") as b, foo() as c:
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
50 |     # We have other things in here, multiple with items, but the user
51 |     # writes a single time to file and that bit they can replace.
   |
help: Replace with `Path("file.txt").write_text(bar(bar(a + x)))`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar, newline="\r\n")`
  --> FURB103.py:58:6
   |
57 | # FURB103
58 | with open("file.txt", "w", newline="\r\n") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
59 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar, newline="\r\n")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar, newline="\r\n")`
  --> FURB103.py:66:6
   |
65 | # FURB103
66 | with builtins.open("file.txt", "w", newline="\r\n") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
67 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar, newline="\r\n")`

FURB103 `open` and `write` should be replaced by `Path("file.txt").write_text(foobar, newline="\r\n")`
  --> FURB103.py:74:6
   |
73 | # FURB103
74 | with o("file.txt", "w", newline="\r\n") as f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
75 |     f.write(foobar)
   |
help: Replace with `Path("file.txt").write_text(foobar, newline="\r\n")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path("file.txt").write_text("test")`
   --> FURB103.py:149:6
    |
147 |         f.write(line)
148 |
149 | with Path("file.txt").open("w") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
150 |     f.write("test")
    |
help: Replace with `Path("file.txt").write_text("test")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path("file.txt").write_bytes(b"test")`
   --> FURB103.py:152:6
    |
150 |     f.write("test")
151 |
152 | with Path("file.txt").open("wb") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
153 |     f.write(b"test")
    |
help: Replace with `Path("file.txt").write_bytes(b"test")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path("file.txt").write_text("test")`
   --> FURB103.py:155:6
    |
153 |     f.write(b"test")
154 |
155 | with Path("file.txt").open(mode="w") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
156 |     f.write("test")
    |
help: Replace with `Path("file.txt").write_text("test")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path("file.txt").write_text("test", encoding="utf8")`
   --> FURB103.py:158:6
    |
156 |     f.write("test")
157 |
158 | with Path("file.txt").open("w", encoding="utf8") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
159 |     f.write("test")
    |
help: Replace with `Path("file.txt").write_text("test", encoding="utf8")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path("file.txt").write_text("test", errors="ignore")`
   --> FURB103.py:161:6
    |
159 |     f.write("test")
160 |
161 | with Path("file.txt").open("w", errors="ignore") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
162 |     f.write("test")
    |
help: Replace with `Path("file.txt").write_text("test", errors="ignore")`

FURB103 `Path.open()` followed by `write()` can be replaced by `Path(foo()).write_text("test")`
   --> FURB103.py:164:6
    |
162 |     f.write("test")
163 |
164 | with Path(foo()).open("w") as f:
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^
165 |     f.write("test")
    |
help: Replace with `Path(foo()).write_text("test")`
